# bananalytics

./: .gitignore  README.md  docker-compose.yml  etl.py  main.py  pyproject.toml  run.sh  schema.sql  scrapy.cfg
banalytics/: items.py  kinds.py  log_formatter.py  middlewares.py  pipelines.py  settings.py  utils.py
banalytics/spiders/: chaldal.py  meenabazar.py
bananalytics/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
bananalytics/spiders/: chaldal.py  meenabazar.py
