[project]
name = "banalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "scrapy>=2.12.0",
]

[[tool.mypy.overrides]]
module = ["scrapy"]
follow_untyped_imports = true
# ignore_missing_imports = true
