[project]
name = "bananalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.1",
    "scrapy>=2.12.0",
]

[[tool.mypy.overrides]]
module = ["scrapy"]
follow_untyped_imports = true

[dependency-groups]
dev = []
# ignore_missing_imports = true
